--- a/plugins/woocommerce-blocks/assets/js/blocks/product-gallery/inner-blocks/product-gallery-pager/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/product-gallery/inner-blocks/product-gallery-pager/style.scss
@@ -3,6 +3,7 @@
 	justify-content: center;
 	list-style: none;
 	gap: $gap-small;
+	padding: 0;
 }
 
 .wp-block-woocommerce-product-gallery__pager-item {
